--- a/package.json
+++ b/package.json
@@ -4,6 +4,13 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "start": "ts-node-dev src/server.ts",
+    "dev": "nodemon src/server.ts",
+    "build": "tsc",
+    "migration:generate": "ts-node-dev ./node_modules/typeorm/cli.js migration:generate -n",
+    "migration:run": "ts-node-dev ./node_modules/typeorm/cli.js migration:run",
+    "migration:revert": "ts-node-dev ./node_modules/typeorm/cli.js migration:revert",
+    "seed:run": "ts-node-dev ./node_modules/typeorm-seeding/dist/cli.js seed",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -11,18 +18,23 @@
   "license": "ISC",
   "dependencies": {
     "@types/express": "^4.17.21",
-    "@types/node": "^20.14.8",
     "bcrypt": "^5.1.1",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "jsonwebtoken": "^9.0.2",
     "mysql2": "^3.10.1",
+    "nodemon": "^3.1.4",
+    "reflect-metadata": "^0.2.2",
     "sequelize": "^6.37.3",
     "ts-node-dev": "^2.0.0",
+    "typeorm": "^0.3.20",
     "typescript": "^5.5.2"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
-    "@types/jsonwebtoken": "^9.0.6"
+    "@types/jsonwebtoken": "^9.0.6",
+    "@types/node": "^20.14.8",
+    "sequelize-cli": "^6.6.2",
+    "ts-node": "^10.9.2"
   }
 }
