--- a/package.json
+++ b/package.json
@@ -17,24 +17,27 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@types/express": "^4.17.21",
-    "bcrypt": "^5.1.1",
-    "dotenv": "^16.4.5",
-    "express": "^4.19.2",
-    "jsonwebtoken": "^9.0.2",
-    "mysql2": "^3.10.1",
+    "bcrypt": "^5.0.1",
+    "body-parser": "^1.19.0",
+    "dotenv": "^10.0.0",
+    "express": "^4.17.1",
+    "jsonwebtoken": "^8.5.1",
+    "mysql2": "^2.2.5",
     "nodemon": "^3.1.4",
-    "reflect-metadata": "^0.2.2",
-    "sequelize": "^6.37.3",
-    "ts-node-dev": "^2.0.0",
-    "typeorm": "^0.3.20",
-    "typescript": "^5.5.2"
+    "reflect-metadata": "^0.1.13",
+    "typeorm": "^0.2.41"
   },
   "devDependencies": {
-    "@types/bcrypt": "^5.0.2",
-    "@types/jsonwebtoken": "^9.0.6",
-    "@types/node": "^20.14.8",
-    "sequelize-cli": "^6.6.2",
-    "ts-node": "^10.9.2"
+    "@types/bcrypt": "^5.0.0",
+    "@types/body-parser": "^1.19.2",
+    "@types/express": "^4.17.13",
+    "@types/faker": "^5.5.9",
+    "@types/jsonwebtoken": "^8.5.6",
+    "@types/node": "^17.0.21",
+    "faker": "^5.5.3",
+    "ts-node": "^10.7.0",
+    "ts-node-dev": "^1.1.8",
+    "typeorm-seeding": "^1.6.1",
+    "typescript": "^4.6.3"
   }
 }
