--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
+    "moment": "^2.30.1",
     "mysql2": "^2.2.5",
     "nodemon": "^3.1.4",
     "reflect-metadata": "^0.1.13",
@@ -33,11 +34,13 @@
     "@types/express": "^4.17.13",
     "@types/faker": "^5.5.9",
     "@types/jsonwebtoken": "^8.5.6",
-    "@types/node": "^17.0.21",
+    "@types/node": "^17.0.45",
+    "@types/uuid": "^10.0.0",
     "faker": "^5.5.3",
     "ts-node": "^10.7.0",
     "ts-node-dev": "^1.1.8",
     "typeorm-seeding": "^1.6.1",
-    "typescript": "^4.6.3"
+    "typescript": "^4.6.3",
+    "uuid": "^10.0.0"
   }
 }
