--- a/ormconfig.json
+++ b/ormconfig.json
@@ -6,7 +6,7 @@
     "password": "Password",
     "database": "restaurant",
     "synchronize": true,
-    "logging": false,
+    "logging": true,
     "entities": ["src/entity/**/*.ts"],
     "migrations": ["src/migration/**/*.ts"],
     "subscribers": ["src/subscriber/**/*.ts"],
