fix: orm config json

--- a/ormconfig.json
+++ b/ormconfig.json
@@ -1,10 +1,10 @@
 {
     "type": "mysql",
-    "host": "localhost",
-    "port": 3306,
+    "host": "monorail.proxy.rlwy.net",
+    "port": 37605,
     "username": "root",
-    "password": "Password",
-    "database": "restaurant",
+    "password": "gpzkSGGakbXONlLzEvqwzDveIZSrvnlG",
+    "database": "railway",
     "synchronize": true,
     "logging": true,
     "entities": ["src/entity/**/*.ts"],
