--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,6 +3,7 @@
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
     "target": "ES5",
+    "skipLibCheck": true,
     "strictPropertyInitialization": false,
     "module": "commonjs",
     "rootDir": "./src",
